src_old/objects/ProjectAttribute__c.object
<CustomObject>
    <fields>
        <fullName>AttributeDefinedResponseValue__c</fullName>
        <formula>AttributeDefinedResponse__r.Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Defined Response Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeDefinedResponse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Defined Response</label>
        <referenceTo>AttributeDefinedResponse__c</referenceTo>
        <relationshipLabel>Project Attributes</relationshipLabel>
        <relationshipName>Project_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AttributeDescription__c</fullName>
        <formula>Attribute__r.Description__c</formula>
        <label>AttributeDescription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeName__c</fullName>
        <formula>Attribute__r.AttributeTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AttributeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeType__c</fullName>
        <formula>TEXT(Attribute__r.AttributeType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AttributeType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeValue__c</fullName>
        <label>AttributeValue</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Project Attributes</relationshipLabel>
        <relationshipName>Project_Attributes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <formula>ProjectTypeAttribute__r.IsRequired__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectTypeAttribute__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Type attribute</label>
        <referenceTo>ProjectTypeAttribute__c</referenceTo>
        <relationshipLabel>Project Attributes</relationshipLabel>
        <relationshipName>Project_Attributes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Attributes</relationshipLabel>
        <relationshipName>Project_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Attribute</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Project Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>